--- a/src/components/main/views/main.html
+++ b/src/components/main/views/main.html
@@ -7,6 +7,6 @@
 		<data-customer-table 
 			data-customer-data='ctrl.customerData' 
 			data-delete-customer='ctrl.deleteCustomer(index)'
-			data-add-customer-details='ctrl.addCustomerDetails(model)'/>
+			data-add-customer-details='ctrl.addCustomerDetails(customer)'/>
 	</div>
 </div>
